# chronicler

./: .env.local.example  .gitignore  CLAUDE.md  LICENSE  chronicler.db-shm  chronicler.db-wal  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
backend/: config.py  database.py  models.py
backend/services/: state.py
bible/example/: characters.example.md  rules.example.md  world.example.md
config/: phases.json
docs/: PRD.md
docs/superpowers/plans/: 2026-04-15-backend-core.md
docs/superpowers/specs/: 2026-04-15-backend-core-design.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/bible/: route.ts
src/app/api/chapters/: route.ts
src/app/api/chapters/[num]/: route.ts
src/app/api/episodes/confirm/: route.ts
src/app/api/episodes/delete/: route.ts
src/app/api/episodes/detail/: route.ts
src/app/api/phases/: route.ts
src/app/api/phases/[id]/: route.ts
src/components/: app-shell.tsx  episode-selector.tsx  log-panel.tsx  main-content.tsx  sidebar.tsx  types.ts
src/lib/: claude-cli.ts  server.ts  types.ts
src/lib/agents/: base.ts  character-designer.ts  editor.ts  episode-agent.ts  plot-architect.ts  registry.ts  world-builder.ts  writer.ts
src/lib/orchestrator/: engine.ts  phase-runner.ts
src/lib/services/: bible.ts  database.ts
tests/: conftest.py  test_config.py  test_database.py  test_models.py  test_state_service.py
tests/lib/: types.test.ts
tests/lib/agents/: agents.test.ts
tests/lib/orchestrator/: engine.test.ts  phase-runner.test.ts
tests/lib/services/: bible.test.ts  database.test.ts
(+3 files in other folders)
